fix overflow with a sidebar in code blocks.

--- a/public/stylesheets/sass/application.sass
+++ b/public/stylesheets/sass/application.sass
@@ -43,13 +43,10 @@ a
 
 /* http://longren.org/2006/09/27/wrapping-text-inside-pre-tags */
 pre
-  overflow-x: auto                       /* Use horizontal scroller if needed; for Firefox 2, not needed in Firefox 3 */
-  white-space: pre-wrap                  /* css-3 */
-  white-space: -moz-pre-wrap \!important /* Mozilla, since 1999 */
-  white-space: -pre-wrap                 /* Opera 4-6 */
-  white-space: -o-pre-wrap               /* Opera 7 */
-  /* width: 99%; */
-  word-wrap: break-word                  /* Internet Explorer 5.5+ */
+  overflow: auto
+  white-space: pre-wrap /* CSS 2.1 */
+  white-space: pre-line /* CSS 3 (and 2.1 as well, actually) */
+  width: 99%
 
 
 // tagN class generation, for the tag_cloud display.
