--- a/public/stylesheets/sass/content.sass
+++ b/public/stylesheets/sass/content.sass
@@ -82,7 +82,6 @@
     padding: 0 1em
 
   pre, code
-    overflow: auto
     +code_font
 
   pre
